--- a/cpu_cores_threads_sockets/manifests/vmi-case1.1.4.yml
+++ b/cpu_cores_threads_sockets/manifests/vmi-case1.1.4.yml
@@ -3,8 +3,8 @@ apiVersion: kubevirt.io/v1alpha2
 kind: VirtualMachineInstance
 metadata:
   labels:
-    special: vmi-case1.1.4
-    name: vmi-case1.1.4
+    special: vmi-case1.1.2b
+  name: vmi-case1.1.2b
 spec:
   domain:
     cpu:
@@ -18,13 +18,12 @@ spec:
     machine:
       type: ""
     resources:
-      limits:
-        cpu: 2
+      requests:
         memory: 64M
+        cpu: 2
+      limits:
+        cpu: 1
   volumes:
   - emptyDisk:
       capacity: 64M
     name: emptyD
-
-
-    
