--- a/cpu_cores_threads_sockets/manifests/vmi-case1.1.3.yml
+++ b/cpu_cores_threads_sockets/manifests/vmi-case1.1.3.yml
@@ -3,8 +3,8 @@ apiVersion: kubevirt.io/v1alpha2
 kind: VirtualMachineInstance
 metadata:
   labels:
-    special: vmi-case1.1.3b
-    name: vmi-case1.1.3b
+    special: vmi-case1.1.3
+    name: vmi-case1.1.3
 spec:
   domain:
     cpu:
@@ -20,6 +20,7 @@ spec:
     resources:
       requests:
         cpu: 2
+        memory: 64M
       limits:
         cpu: 2
         memory: 64M
