--- a/cpu_cores_threads_sockets/manifests/vmi-case1.2.2a.yml
+++ b/cpu_cores_threads_sockets/manifests/vmi-case1.2.2a.yml
@@ -3,8 +3,8 @@ apiVersion: kubevirt.io/v1alpha2
 kind: VirtualMachineInstance
 metadata:
   labels:
-    special: vmi-case1.1.4b
-  name: vmi-case1.1.4b
+    special: vmi-case1.2.2a
+  name: vmi-case1.2.2a
 spec:
   domain:
     cpu:
