--- a/cpu_cores_threads_sockets/manifests/vmi-case1.2.2b.yml
+++ b/cpu_cores_threads_sockets/manifests/vmi-case1.2.2b.yml
@@ -3,8 +3,8 @@ apiVersion: kubevirt.io/v1alpha2
 kind: VirtualMachineInstance
 metadata:
   labels:
-    special: vmi-case1.1.4d
-  name: vmi-case1.1.4d
+    special: vmi-case1.2.2b
+  name: vmi-case1.2.2b
 spec:
   domain:
     cpu:
@@ -21,7 +21,6 @@ spec:
     resources:
       requests:
         memory: 64M
-      limits:
         cpu: 2
   volumes:
   - emptyDisk:
