--- a/cpu_cores_threads_sockets/manifests/vmi-case1.2.2c.yml
+++ b/cpu_cores_threads_sockets/manifests/vmi-case1.2.2c.yml
@@ -3,8 +3,8 @@ apiVersion: kubevirt.io/v1alpha2
 kind: VirtualMachineInstance
 metadata:
   labels:
-    special: vmi-case1.1.4c
-  name: vmi-case1.1.4c
+    special: vmi-case1.2.2c
+  name: vmi-case1.2.2c
 spec:
   domain:
     cpu:
@@ -21,6 +21,7 @@ spec:
     resources:
       requests:
         memory: 64M
+      limits:
         cpu: 2
   volumes:
   - emptyDisk:
