--- a/cpu_cores_threads_sockets/manifests/without_cpu_resources/vm-template-fedora-only-sockets.yaml
+++ b/cpu_cores_threads_sockets/manifests/without_cpu_resources/vm-template-fedora-only-sockets.yaml
@@ -30,7 +30,7 @@ objects:
       spec:
         domain:
           cpu:
-            cores: ${{CPU_CORES}}
+            sockets: ${{CPU_SOCKETS}}
           devices:
             disks:
             - disk:
@@ -64,6 +64,6 @@ parameters:
 - description: Amount of memory
   name: MEMORY
   value: 1500Mi
-- description: Amount of cores
-  name: CPU_CORES
+- description: Amount of sockets
+  name: CPU_SOCKETS
   value: "2"
