--- a/cpu_cores_threads_sockets/manifests/without_cpu_resources/vm-template-fedora-sockets-cores-and-threads.yaml
+++ b/cpu_cores_threads_sockets/manifests/without_cpu_resources/vm-template-fedora-sockets-cores-and-threads.yaml
@@ -72,3 +72,6 @@ parameters:
 - description: Amount of threads
   name: CPU_THREADS
   value: "2"
+- description: Amount of sockets
+  name: CPU_SOCKETS
+  value: "2"
