--- a/cpu_cores_threads_sockets/manifests/without_cpu_resources/vmi-case1.2.3.yml
+++ b/cpu_cores_threads_sockets/manifests/without_cpu_resources/vmi-case1.2.3.yml
@@ -3,10 +3,12 @@ apiVersion: kubevirt.io/v1alpha2
 kind: VirtualMachineInstance
 metadata:
   labels:
-    special: vmi-case1.1.3
-    name: vmi-case1.1.3
+    special: vmi-case1.2.3
+    name: vmi-case1.2.3
 spec:
   domain:
+    cpu:
+      dedicatedCpuPlacement: true
     devices:
       disks:
       - disk:
@@ -16,6 +18,9 @@ spec:
     machine:
       type: ""
     resources:
+      requests:
+        cpu: 4
+        memory: 64M
       limits:
         cpu: 2
         memory: 64M
