--- a/cpu_cores_threads_sockets/manifests/automation/vm-template-fedora-sockets-cores-and-threads.yaml
+++ b/cpu_cores_threads_sockets/manifests/automation/vm-template-fedora-sockets-cores-and-threads.yaml
@@ -51,7 +51,7 @@ objects:
         terminationGracePeriodSeconds: 0
         volumes:
         - containerDisk:
-            image: kubevirt/fedora-cloud-container-disk-demo:devel
+            image: kubevirt/fedora-cloud-container-disk-demo
           name: registryvolume
         - cloudInitNoCloud:
             userData: |-
