--- a/cpu_cores_threads_sockets/manifests/automation/vm-template-fedora-only-cores.yaml
+++ b/cpu_cores_threads_sockets/manifests/automation/vm-template-fedora-only-cores.yaml
@@ -49,7 +49,7 @@ objects:
         terminationGracePeriodSeconds: 0
         volumes:
         - containerDisk:
-            image: registry:5000/kubevirt/fedora-cloud-container-disk-demo:devel
+            image: registry:5000/kubevirt/fedora-cloud-container-disk-demo
           name: registryvolume
         - cloudInitNoCloud:
             userData: |-
