--- a/cpu_cores_threads_sockets/manifests/automation/vmi-case1.1.yml
+++ b/cpu_cores_threads_sockets/manifests/automation/vmi-case1.1.yml
@@ -1,5 +1,5 @@
 ---
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   labels:
@@ -11,14 +11,13 @@ spec:
       disks:
       - disk:
           bus: virtio
-        name: disk
-        volumeName: emptyD
+        name: emptyD
     machine:
       type: ""
     resources:
       requests:
         memory: 64M
   volumes:
-  - emptyDisk:
+  - name: emptyD
+   emptyDisk:
       capacity: 64M
-    name: emptyD
