--- a/cpu_cores_threads_sockets/manifests/automation/vmi-case1.2.3.yml
+++ b/cpu_cores_threads_sockets/manifests/automation/vmi-case1.2.3.yml
@@ -1,5 +1,5 @@
 ---
-apiVersion: kubevirt.io/v1alpha2
+apiVersion: kubevirt.io/v1alpha3
 kind: VirtualMachineInstance
 metadata:
   labels:
@@ -13,8 +13,7 @@ spec:
       disks:
       - disk:
           bus: virtio
-        name: disk
-        volumeName: emptyD
+        name: emptyD
     machine:
       type: ""
     resources:
@@ -25,6 +24,6 @@ spec:
         cpu: 2
         memory: 64M
   volumes:
+  - name: emptyD
   - emptyDisk:
       capacity: 64M
-    name: emptyD
