--- a/cpu_cores_threads_sockets/manifests/automation/vm-template-fedora-only-cores-and-threads.yaml
+++ b/cpu_cores_threads_sockets/manifests/automation/vm-template-fedora-only-cores-and-threads.yaml
@@ -36,12 +36,10 @@ objects:
             disks:
             - disk:
                 bus: virtio
-              name: containerdisk
-              volumeName: registryvolume
+              name: registryvolume
             - disk:
                 bus: virtio
-              name: cloudinitdisk
-              volumeName: cloudinitvolume
+              name: cloudinitvolume
           machine:
             type: ""
           resources:
