--- a/cpu_cores_threads_sockets/manifests/automation/vmi-case1.2.1.yml
+++ b/cpu_cores_threads_sockets/manifests/automation/vmi-case1.2.1.yml
@@ -20,6 +20,6 @@ spec:
         memory: 64M
         cpu: 2
   volumes:
-  - emptyDisk:
+  - name: emptyD
+    emptyDisk:
       capacity: 64M
-    name: emptyD
