--- a/cpu_cores_threads_sockets/manifests/automation/vmi-case1.2.1.yml
+++ b/cpu_cores_threads_sockets/manifests/automation/vmi-case1.2.1.yml
@@ -11,8 +11,7 @@ spec:
       disks:
       - disk:
           bus: virtio
-        name: disk
-        volumeName: emptyD
+        name: emptyD
     machine:
       type: ""
     resources:
