--- a/cpu_cores_threads_sockets/manifests/automation/vm-template-fedora-only-threads.yaml
+++ b/cpu_cores_threads_sockets/manifests/automation/vm-template-fedora-only-threads.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: valpha3
+apiVersion: v1
 kind: Template
 metadata:
   annotations:
@@ -11,7 +11,7 @@ metadata:
     miq.github.io/kubevirt-is-vm-template: "true"
   name: vm-template-fedora
 objects:
-- apiVersion: kubevirt.io/v1alpha2
+- apiVersion: kubevirt.io/v1alpha3
   kind: VirtualMachine
   metadata:
     creationTimestamp: null
